# mat205

./: CMakeLists.txt  README.md  integracionSimpson.cpp  integracionTrapecios.cpp  interpolacion-main.cpp  main.cpp
lib/: interpolacion.cpp  interpolacion.h  matrix.cpp  matrix.h  matriz.cpp  matriz.h  polinomio.cpp  polinomio.h
